# Long-range-DOPE-app

./: index.html  package.json  readme.md  vite.config.ts
.devcontainer/: devcontainer.json
.github/: index
.github/workflows/: deploy.yml  rust-wasm-ci.yml
Ballistics Calculator Application/: README.md  index.html  package.json
Ballistics Calculator Application/src/: App.tsx  TODO.md
Ballistics Calculator Application/src/components/: BallisticsCalculator.tsx  EquipmentManager.tsx  Navigation.tsx  PDFExport.tsx  PresetSelectors.tsx  Router.tsx  SessionManager.tsx  StorageManager.tsx  WindClock.tsx
Ballistics Calculator Application/src/components/ui/: dialog.tsx
Ballistics Calculator Application/src/contexts/: AppContext.tsx
Ballistics Calculator Application/src/guidelines/: Guidelines.md
Ballistics Calculator Application/src/lib/: appState.ts  calcEngine.ts  corrections.ts  dragTables.ts  indexedDB.ts
Ballistics Calculator Application/src/pages/: CalculatorPage.tsx  DOPEPage.tsx  EquipmentPage.tsx  LogPage.tsx  calc.handlers.ts  dope.handlers.ts  log.handlers.ts
Ballistics Calculator Application/src/styles/: globals.css
Ballistics Calculator Application/src/utils/: ballistics.ts  fmi.ts  weather.ts
Ballistics-workspace/: Cargo.toml
ballistics-workspace/: Cargo.toml
ballistics-workspace/crates/ballistics-6dof/: Cargo.toml
ballistics-workspace/crates/ballistics-6dof/src/: lib.rs
ballistics-workspace/crates/ballistics-ffi-wasm/: Cargo.toml
ballistics-workspace/crates/ballistics-ffi-wasm/src/: lib.rs
ballistics-workspace/crates/ballistics-models/: Cargo.toml
ballistics-workspace/crates/ballistics-models/src/: lib.rs
ballistics-workspace/crates/ballistics-pointmass/: Cargo.toml
ballistics-workspace/crates/ballistics-pointmass/src/: lib.rs
ballistics-workspace/tests/: 6dof_smoke.rs
crates/ballistics-core/: Cargo.toml
crates/ballistics-core/src/: lib.rs
src/: TODO.md  index.css  main.tsx
src/components/: BallisticsCalculator.tsx  EquipmentManager.tsx  Navigation.tsx  PDFExport.tsx  PresetSelectors.tsx  Router.tsx  SessionManager.tsx  StorageManager.tsx  WindClock.tsx
src/components/ui/: input.tsx
src/contexts/: AppContext.tsx
src/guidelines/: guidelines.md
src/hooks/: useFMIWeather.ts
src/lib/: appState.ts  appStates.ts  calcEngine.ts  corrections.ts  dragTables.ts  indexedDB.ts
src/pages/: CalculatorPage.tsx  DOPEpage.tsx  EquipmentPage.tsx  calc.handlers.ts  dope.handlers  dope.handlers.ts  log.handlers.ts  logPage.tsx
src/styles/: globals.css
src/utils/: ballistics.ts  coriolis.ts  fmi.ts  weather.ts
