[workspace]
resolver = "2"
members = [
  "crates/ballistics-core",
  "crates/ballistics-models",
  "crates/ballistics-pointmass",
  "crates/ballistics-6dof",
  "crates/ballistics-ffi-wasm",
  # "crates/ballistics-ffi-node", # uncomment only after this crate exists
]
# Non-crates (e.g., data/, packages/) are naturally ignored.

[workspace.dependencies]
# Shared deps & versions for all member crates (override per-crate if needed)
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"

# Math / numerics
nalgebra    = "0.32"
approx      = "0.5"

# Units (optional; enable in crates that want it)
uom         = { version = "0.36", features = ["f32", "si"], default-features = false }

# WASM (only used by ffi-wasm crate)
wasm-bindgen = "0.2"

# JS-friendly float formatting, etc. (optional; handy for FFI)
ryu = "1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
