[package]
name = "ballistics-ffi-wasm"
version = "0.1.0"
edition = "2021"
authors = ["SniperApp Dev Team"]
description = "WASM bindings for the ballistics solver"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ballistics-core = { path = "../ballistics-core" }
ballistics-pointmass = { path = "../ballistics-pointmass" }
ballistics-models = { path = "../ballistics-models" }
