[package]
name = "ballistics-ffi-wasm"
version = "0.1.0"
edition = "2021"
authors = ["SniperApp Dev Team"]
description = "WASM bindings for the ballistics solver"
license = "MIT"

[lib]
# cdylib needed for wasm
crate-type = ["cdylib"]

[dependencies]
# WASM & better panic messages in browser console
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# JSON + (de)serialize to/from JsValue ergonomically
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_wasm_bindgen = "0.6"

# our internal crates
ballistics-core = { path = "../ballistics-core" }
ballistics-pointmass = { path = "../ballistics-pointmass" }
ballistics-models = { path = "../ballistics-models" }
ballistics-6dof = { path = "../ballistics-6dof" }

# tiny helper for float → string; harmless to keep
ryu = "1"

[features]
default = []
