[package]
name = "ballistics-ffi-wasm"
version = "0.1.0"
edition = "2021"
authors = ["SniperApp Dev Team"]
description = "WASM bindings for the ballistics solver"
license = "MIT"

[lib]
# cdylib for the wasm artifact; rlib is handy for unit tests
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"

ballistics-core       = { path = "../ballistics-core" }
ballistics-pointmass  = { path = "../ballistics-pointmass" }
ballistics-models     = { path = "../ballistics-models" }
ballistics-6dof       = { path = "../ballistics-6dof" }
